--- a/src/app/customers/customers.page.html
+++ b/src/app/customers/customers.page.html
@@ -2,6 +2,15 @@
   <ion-toolbar color="mycolor">
     <ion-title>customers</ion-title>
   </ion-toolbar>
+
+  <ion-toolbar color="mycolor">
+    <ion-searchbar
+      placeholder="Buscar..."
+      animated
+      (ionInput)="searchCustomer($event)"
+    >
+    </ion-searchbar>
+  </ion-toolbar>
 </ion-header>
 
 <ion-content>
@@ -10,7 +19,7 @@
   </div>
 
   <ion-list *ngIf="permission">
-    <ion-item *ngFor="let user of users">
+    <ion-item *ngFor="let user of searchedUser">
       <ion-avatar slot="start">
         <img src="../../assets/customers-img/{{user.image}}" />
       </ion-avatar>
@@ -25,5 +34,4 @@
   <ion-label *ngIf="!permission">
     You don't have permission to view the customers list.
   </ion-label>
-  
 </ion-content>
