--- a/src/app/cities/cities.page.html
+++ b/src/app/cities/cities.page.html
@@ -7,7 +7,7 @@
 <ion-content>
   <ion-row>
     <ion-col sizeLg="6" sizeMd="6" sizeXs="12" *ngFor="let city of cities">
-      <ion-card (click)="presentAlert2()">
+      <ion-card [routerLink]="['/city', city.id]">
         <img src="../../assets/cities-img/{{city.image}}" />
         <div class="card-content">
           <h2>{{city.name}}</h2>
